--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<nav class="navbar navbar-inverse navbar-fixed-top ">
 					  <div class="container">
 					    <div class="navbar-header">
-					      <button style="width:7%;" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					      <button style="width:12%;" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					        <span class="icon-bar"></span>
 					        <span class="icon-bar"></span>
 					        <span class="icon-bar"></span>                        
@@ -84,7 +84,7 @@
 										<option value='female'>Female</option>
 									</select>
 								</div>	
-								<button id="submit" type="submit" style="margin-bottom:5%;margin-top:5%;margin-left:5%;font-size:1.5em;">Send</button>
+								<button id="submit" type="submit" style="margin-bottom:5%;margin-top:5%;margin-left:5%;text-align:center;">Send</button>
 							</div>
 						</form>
 					</div>	
