--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 								<br>
 								<div id="gender_text" style="margin-left:5%;">Select Your Gender</div>
 								<div class="gender_option" style="margin-left:5%;">
-									<select name="gender" style="padding:20px;">
+									<select name="gender">
 										<option value="male" style="color:black;">Male</option>
 										<option value='female'>Female</option>
 									</select>
 								</div>	
-								<button id="submit" type="submit" style="margin-bottom:5%;margin-top:5%;margin-left:5%;text-align:center;">Send</button>
+								<button id="submit" type="submit" style="margin-bottom:5%;margin-top:5%;margin-left:5%;text-align:center;font-size:1.5em;">Send</button>
 							</div>
 						</form>
 					</div>	
