--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>We the North</title>
+		<title>For the North</title>
 		<meta charset="utf-8">
   		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel ="stylesheet" href = "WTN_landing.css">
@@ -58,11 +58,8 @@
 										<button id="submit" type="submit" style="margin-top:5%;margin-left:5%;text-align:center;font-size:1.5em;">Send</button>
 
 										<div class="socials">
-											<i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-											<i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
-											<i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
-
-
+											<a  style="color:none;" href="https://www.instagram.com/forthenorthca/"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+											<a href="https://www.facebook.com/forthenorthca/?ref=br_rs"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
 										</div>
 									</div>
 								</form>
