--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 				</div>
 												  <!-- Customise the Thankyou Message People See when they submit the form: -->
 								  <div style="display:none;" id="thankyou_message">
-								    <center><h2><em>Thanks</em> for contacting us!
-								      We will get back to you soon!</h2></center>
+								    <center><h2>Thanks for entering! Visit our socials for more chances to win!</h2></center>
 								  </div>
 
 								  <script data-cfasync="false" type="text/javascript"
